--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@
       height: auto;
       background-color: grey;
       color: lightgrey;
-      font-size: 30px;
+      font-size: 16x;
       padding: 20px;
 
       .play-again {
